--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "bootstrap": "^5.3.3",
+    "i18next": "^23.16.5",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.80.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
