--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "sass": "^1.80.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
-  },
+  },  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -45,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "21.x"
   }
 }
